--- a/src/html-blocks/main-baner.html
+++ b/src/html-blocks/main-baner.html
@@ -5,24 +5,65 @@
 
       <div class="swiper-slide">
         <picture class="img-wrapper">
-          <source type="image/jpg" srcset="./img/promotion/Baners_600x600-shoe-covers.jpg" media="(max-width: 610px)" />
-          <img src="./img/promotion/Baners_1600x650-shoe-covers.jpg" alt="Акция на бахилы">
+          <source type="image/jpg" srcset="./img/promotion/Baner-shoe-covers_600x600.jpg" media="(max-width: 610px)" />
+          <img src="./img/promotion/Baner-shoe-covers_1600x650.jpg" alt="Акция на бахилы">
         </picture>
         <button class="main-baner-button orange js-getOrder-button">Заказать</button>
       </div>
 
       <div class="swiper-slide">
         <picture class="img-wrapper">
-          <source type="image/jpg" srcset="./img/promotion/Baners_600x600-gloves.jpg" media="(max-width: 610px)" />
-          <img src="./img/promotion/Baners_1600x650-gloves.jpg" alt="Акция на перчатки">
+          <source type="image/jpg" srcset="./img/promotion/Baner-gloves_600x600.jpg" media="(max-width: 610px)" />
+          <img src="./img/promotion/Baner-gloves_1600x650.jpg" alt="Акция на перчатки">
         </picture>
         <button class="main-baner-button orange js-getOrder-button">Заказать</button>
       </div>
 
       <div class="swiper-slide">
         <picture class="img-wrapper">
-          <source type="image/jpg" srcset="./img/promotion/Baners_600x600-syringes.jpg" media="(max-width: 610px)" />
-          <img src="./img/promotion/Baners_1600x650-syringes.jpg" alt="Акция на шприцы">
+          <source type="image/jpg" srcset="./img/promotion/Baner-syringes_600x600.jpg" media="(max-width: 610px)" />
+          <img src="./img/promotion/Baner-syringes_1600x650.jpg" alt="Акция на шприцы">
+        </picture>
+        <button class="main-baner-button orange js-getOrder-button">Заказать</button>
+      </div>
+
+      <div class="swiper-slide">
+        <picture class="img-wrapper">
+          <source type="image/jpg" srcset="./img/promotion/Baner-bathrobes_600x600.jpg" media="(max-width: 610px)" />
+          <img src="./img/promotion/Baner-bathrobes_1600x650.jpg" alt="Акция на халаты">
+        </picture>
+        <button class="main-baner-button orange js-getOrder-button">Заказать</button>
+      </div>
+
+      <div class="swiper-slide">
+        <picture class="img-wrapper">
+          <source type="image/jpg" srcset="./img/promotion/Baner-masks_600x600.jpg" media="(max-width: 610px)" />
+          <img src="./img/promotion/Baner-masks_1600x650.jpg" alt="Акция на медецинские маски">
+        </picture>
+        <button class="main-baner-button orange js-getOrder-button">Заказать</button>
+      </div>
+
+      <div class="swiper-slide">
+        <picture class="img-wrapper">
+          <source type="image/jpg" srcset="./img/promotion/Baner-masks-children_600x600.jpg"
+            media="(max-width: 610px)" />
+          <img src="./img/promotion/Baner-masks-children_1600x650.jpg" alt="Акция на детские медецинские маски">
+        </picture>
+        <button class="main-baner-button orange js-getOrder-button">Заказать</button>
+      </div>
+
+      <div class="swiper-slide">
+        <picture class="img-wrapper">
+          <source type="image/jpg" srcset="./img/promotion/Baner-masks-type-c_600x600.jpg" media="(max-width: 610px)" />
+          <img src="./img/promotion/Baner-masks-type-c_1600x650.jpg" alt="Акция на медецинские маски тип С">
+        </picture>
+        <button class="main-baner-button orange js-getOrder-button">Заказать</button>
+      </div>
+
+      <div class="swiper-slide">
+        <picture class="img-wrapper">
+          <source type="image/jpg" srcset="./img/promotion/Baner-mirror_600x600.jpg" media="(max-width: 610px)" />
+          <img src="./img/promotion/Baner-mirror_1600x650.jpg" alt="Акция на зеркала Куско">
         </picture>
         <button class="main-baner-button orange js-getOrder-button">Заказать</button>
       </div>
