--- a/src/index.html
+++ b/src/index.html
@@ -95,7 +95,7 @@
           <input type="email" placeholder="Электронная почта" name="email">
           <span class="warning">Необходимо заполнить все поля</span>
           <div class="modal-buttons-block">
-            <button class="button corp-violet mr-m" type="submit" id="modal-submit-request" disabled>Получить
+            <button class="button corp-violet mr-m" type="submit" id="js-modal-request-submit">Получить
               прайс</button>
             <button class="button button-light js-modal-price-button-close">Закрыть</button>
           </div>
