fix baners, semantic

--- a/src/html-blocks/our-production-list.html
+++ b/src/html-blocks/our-production-list.html
@@ -3,7 +3,7 @@
 
     <div class="swiper-slide li">
       <div class="our-production--photo df--ai-c">
-        <img src="./img/our-production-01.jpg" alt="">
+        <img src="./img/our-production/our-production-01.jpg" alt="Операционные наборы">
       </div>
       <div class="our-production--description">
         <h6>Операционные наборы</h6>
@@ -17,7 +17,7 @@
 
     <div class="swiper-slide li">
       <div class="our-production--photo df--ai-c">
-        <img src="./img/our-production-02.jpg" alt="">
+        <img src="./img/our-production/our-production-02.jpg" alt="Медицинские перчатки">
       </div>
       <div class="our-production--description">
         <h6>Перчатки</h6>
@@ -31,7 +31,7 @@
 
     <div class="swiper-slide li">
       <div class="our-production--photo df--ai-c">
-        <img src="./img/our-production-03.jpg" alt="">
+        <img src="./img/our-production/our-production-03.jpg" alt="Одноразовые защитные комбинезоны">
       </div>
       <div class="our-production--description">
         <h6>Комбинезоны</h6>
@@ -43,7 +43,7 @@
 
     <div class="swiper-slide li">
       <div class="our-production--photo df--ai-c">
-        <img src="./img/our-production-04.jpg" alt="">
+        <img src="./img/our-production/our-production-04.jpg" alt="Медицинские костюмы одноразового применения">
       </div>
       <div class="our-production--description">
         <h6>Медицинские костюмы</h6>
@@ -55,7 +55,7 @@
 
     <div class="swiper-slide li">
       <div class="our-production--photo df--ai-c">
-        <img src="./img/our-production-05.jpg" alt="">
+        <img src="./img/our-production/our-production-05.jpg" alt="Маски медицинские">
       </div>
       <div class="our-production--description">
         <h6>Маски медицинские</h6>
@@ -69,7 +69,7 @@
 
     <div class="swiper-slide li">
       <div class="our-production--photo df--ai-c">
-        <img src="./img/our-production-06.jpg" alt="">
+        <img src="./img/our-production/our-production-06.jpg" alt="Уголь активированный">
       </div>
       <div class="our-production--description">
         <h6>Уголь активированный</h6>
@@ -81,7 +81,7 @@
 
     <div class="swiper-slide li">
       <div class="our-production--photo df--ai-c">
-        <img src="./img/our-production-07.jpg" alt="">
+        <img src="./img/our-production/our-production-07.jpg" alt="Медицинские шапочки">
       </div>
       <div class="our-production--description">
         <h6>Бахилы и шапочки</h6>
@@ -93,7 +93,7 @@
 
     <div class="swiper-slide li">
       <div class="our-production--photo df--ai-c">
-        <img src="./img/our-production-08.jpg" alt="">
+        <img src="./img/our-production/our-production-08.jpg" alt="Чехлы для операционных">
       </div>
       <div class="our-production--description">
         <h6>Чехлы для операционных</h6>
@@ -105,7 +105,7 @@
 
     <div class="swiper-slide li">
       <div class="our-production--photo df--ai-c">
-        <img src="./img/our-production-09.jpg" alt="">
+        <img src="./img/our-production/our-production-09.jpg" alt="Медицинские простыни">
       </div>
       <div class="our-production--description">
         <h6>Простыни, подстилки и пеленки</h6>
@@ -117,7 +117,7 @@
 
     <div class="swiper-slide li">
       <div class="our-production--photo df--ai-c">
-        <img src="./img/our-production-10.jpg" alt="">
+        <img src="./img/our-production/our-production-10.jpg" alt="Контейнеры для анализов">
       </div>
       <div class="our-production--description">
         <h6>Контейнеры для анализов</h6>
@@ -129,7 +129,7 @@
 
     <div class="swiper-slide li">
       <div class="our-production--photo df--ai-c">
-        <img src="./img/our-production-11.jpg" alt="">
+        <img src="./img/our-production/our-production-11.jpg" alt="Зеркало Куско">
       </div>
       <div class="our-production--description">
         <h6>Гинекологические инструменты</h6>
@@ -141,7 +141,7 @@
 
     <div class="swiper-slide li">
       <div class="our-production--photo df--ai-c">
-        <img src="./img/our-production-12.jpg" alt="">
+        <img src="./img/our-production/our-production-12.jpg" alt="Шприцы">
       </div>
       <div class="our-production--description">
         <h6>Шприцы</h6>
