--- a/src/html-blocks/reviews.html
+++ b/src/html-blocks/reviews.html
@@ -5,7 +5,7 @@
     <div class="reviews--item">
       <div class="reviews--item__image" data-fancybox="gallery" data-src="./img/reviews/rev-abdi-745x1024.jpg"
         data-caption="Abdi">
-        <img src="./img/reviews/rev-abdi-thumbnail.jpg" alt="">
+        <img src="./img/reviews/rev-abdi-thumbnail.jpg" alt="Отзыв Abdi">
       </div>
       <p class="mt-0-5">Abdi</p>
     </div>
@@ -13,7 +13,7 @@
     <div class="reviews--item">
       <div class="reviews--item__image" data-fancybox="gallery" data-src="./img/reviews/rev-adal-745x1024.jpg"
         data-caption="Adal">
-        <img src="./img/reviews/rev-adal-thumbnail.jpg" alt="">
+        <img src="./img/reviews/rev-adal-thumbnail.jpg" alt="Отзыв Adal">
       </div>
       <p class="mt-0-5">Adal</p>
     </div>
@@ -21,7 +21,7 @@
     <div class="reviews--item">
       <div class="reviews--item__image" data-fancybox="gallery" data-src="./img/reviews/rev-galaxy-745x1024.jpg"
         data-caption="Galaxy">
-        <img src="./img/reviews/rev-galaxy-thumbnail.jpg" alt="">
+        <img src="./img/reviews/rev-galaxy-thumbnail.jpg" alt="Отзыв Galaxy">
       </div>
       <p class="mt-0-5">Galaxy</p>
     </div>
@@ -29,7 +29,7 @@
     <div class="reviews--item">
       <div class="reviews--item__image" data-fancybox="gallery" data-src="./img/reviews/rev-hosp-745x1024.jpg"
         data-caption="Родильный дом №1">
-        <img src="./img/reviews/rev-hosp-thumbnail.jpg" alt="">
+        <img src="./img/reviews/rev-hosp-thumbnail.jpg" alt="Отзыв Родильный дом №1">
       </div>
       <p class="mt-0-5">Родильный дом №1</p>
     </div>
