--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@
         <button class="button js-getOrder-button">Заказать</button>
       </div>
       <div class="offer--image pos-r">
-        <img src="./img/doctor-image.png" alt="">
+        <img src="./img/doctor-image.png" alt="Врач">
       </div>
     </div>
   </section>
@@ -65,7 +65,7 @@
   @@include('./html-blocks/advantages.html')
 
   <section class="made-in-kaz mt-1-5">
-    <div class="container made-in-kaz-wrapper">
+    <div class="container made-in-kaz-wrapper observer">
       <div class="image">
         <img class="image-v" src="./img/M-in-K.png" alt="Made in Kazakhstan" loading="lazy">
         <img class="image-h" src="./img/M-in-K-h.png" alt="Made in Kazakhstan" loading="lazy">
