--- a/src/html-blocks/head.html
+++ b/src/html-blocks/head.html
@@ -5,9 +5,23 @@
 <link rel="icon" sizes="16x16" href="./favicon-16x16.png" type="image/png">
 <link rel="icon" sizes="32x32" href="./favicon-32x32.png" type="image/png">
 
+<meta property="og:title" content="Одноразовые изделия медицинского назначения">
+<meta property="og:image" content="./img/og-image-1200x630.jpg">
+<meta property="og:image:type" content="image/jpg">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
+
 <!-- Скрыт от индексации -->
 <meta name="robots" content="noindex, nofollow">
 <!-- Скрыт от индексации -->
+
+<meta name="google" content="notranslate">
+
+<meta name="keywords"
+  content="Изделия медицинского назначения, бахилы, шприцы, медицинские перчатки, медицинские маски, одноразовые медицинские изделия, уголь активированный, медицинские костюмы, кардио комплекты, зеркало Куско" />
+
+<meta name="description"
+  content="Одноразовые изделия медицинского назначения, произведенные в Казахстане. 25 лет на рынке, высокое качество, широкий ассортимент, конкурентная цена" />
 
 <link rel="stylesheet" href="styles.css">
 <title>Dolce Pharm</title>
