--- a/src/html-blocks/header.html
+++ b/src/html-blocks/header.html
@@ -7,7 +7,8 @@
       <a class="button header-button violet button-download" href="./files/Dolce-catalog.pdf" target="_blank"
         download>Скачать каталог</a>
       <button class="button header-button blue button-price js-modal-request-price">Получить прайс</button>
-      <a href="https://wa.me/+77711041201" class="button header-button corp-violet" target="_blank">Оставить завку</a>
+      <a href="https://wa.me/+77711041201" class="button header-button corp-violet-light" target="_blank">Оставить
+        завку</a>
       <button class="fz-0" title="Связаться с нами" id="js-modal-phone-button">
         <svg>
           <use xlink:href="#phone-list"></use>
