--- a/src/html-blocks/main-baner.html
+++ b/src/html-blocks/main-baner.html
@@ -1,5 +1,5 @@
 <section class="baner mt-0-25">
-  <h1 class="visually-hidden">Акционные предложения на медецинские изделия</h1>
+  <h1 class="visually-hidden">Акционные предложения на медицинские изделия</h1>
   <div class="swiper">
     <div class="swiper-wrapper">
 
@@ -38,7 +38,7 @@
       <div class="swiper-slide">
         <picture class="img-wrapper">
           <source type="image/jpg" srcset="./img/promotion/Baner-masks_600x600.jpg" media="(max-width: 610px)" />
-          <img src="./img/promotion/Baner-masks_1600x650.jpg" alt="Акция на медецинские маски">
+          <img src="./img/promotion/Baner-masks_1600x650.jpg" alt="Акция на медицинские маски">
         </picture>
         <button class="main-baner-button orange js-getOrder-button">Заказать</button>
       </div>
@@ -47,7 +47,7 @@
         <picture class="img-wrapper">
           <source type="image/jpg" srcset="./img/promotion/Baner-masks-children_600x600.jpg"
             media="(max-width: 610px)" />
-          <img src="./img/promotion/Baner-masks-children_1600x650.jpg" alt="Акция на детские медецинские маски">
+          <img src="./img/promotion/Baner-masks-children_1600x650.jpg" alt="Акция на детские медицинские маски">
         </picture>
         <button class="main-baner-button orange js-getOrder-button">Заказать</button>
       </div>
@@ -55,7 +55,7 @@
       <div class="swiper-slide">
         <picture class="img-wrapper">
           <source type="image/jpg" srcset="./img/promotion/Baner-masks-type-c_600x600.jpg" media="(max-width: 610px)" />
-          <img src="./img/promotion/Baner-masks-type-c_1600x650.jpg" alt="Акция на медецинские маски тип С">
+          <img src="./img/promotion/Baner-masks-type-c_1600x650.jpg" alt="Акция на медицинские маски тип С">
         </picture>
         <button class="main-baner-button orange js-getOrder-button">Заказать</button>
       </div>
