--- a/src/html-blocks/head.html
+++ b/src/html-blocks/head.html
@@ -18,10 +18,10 @@
 <meta name="google" content="notranslate">
 
 <meta name="keywords"
-  content="Изделия медицинского назначения, бахилы, шприцы, медицинские перчатки, медицинские маски, одноразовые медицинские изделия, уголь активированный, медицинские костюмы, кардио комплекты, зеркало Куско" />
+  content="Изделия медицинского назначения, бахилы, шприцы, медицинские перчатки, медицинские маски, одноразовые медицинские изделия, уголь активированный, медицинские костюмы, кардио комплекты, зеркало Куско">
 
 <meta name="description"
-  content="Одноразовые изделия медицинского назначения, произведенные в Казахстане. 25 лет на рынке, высокое качество, широкий ассортимент, конкурентная цена" />
+  content="Одноразовые изделия медицинского назначения, произведенные в Казахстане. 25 лет на рынке, высокое качество, широкий ассортимент, конкурентная цена">
 
 <link rel="stylesheet" href="styles.css">
 <title>Dolce Pharm</title>
