--- a/src/html-blocks/main-baner.html
+++ b/src/html-blocks/main-baner.html
@@ -5,7 +5,7 @@
 
       <div class="swiper-slide">
         <picture class="img-wrapper">
-          <source type="image/jpg" srcset="./img/promotion/Baner-shoe-covers_600x600.jpg" media="(max-width: 610px)" />
+          <source type="image/jpg" srcset="./img/promotion/Baner-shoe-covers_600x600.jpg" media="(max-width: 610px)">
           <img src="./img/promotion/Baner-shoe-covers_1600x650.jpg" alt="Акция на бахилы">
         </picture>
         <button class="main-baner-button orange js-getOrder-button">Заказать</button>
@@ -13,7 +13,7 @@
 
       <div class="swiper-slide">
         <picture class="img-wrapper">
-          <source type="image/jpg" srcset="./img/promotion/Baner-gloves_600x600.jpg" media="(max-width: 610px)" />
+          <source type="image/jpg" srcset="./img/promotion/Baner-gloves_600x600.jpg" media="(max-width: 610px)">
           <img src="./img/promotion/Baner-gloves_1600x650.jpg" alt="Акция на перчатки">
         </picture>
         <button class="main-baner-button orange js-getOrder-button">Заказать</button>
@@ -21,7 +21,7 @@
 
       <div class="swiper-slide">
         <picture class="img-wrapper">
-          <source type="image/jpg" srcset="./img/promotion/Baner-syringes_600x600.jpg" media="(max-width: 610px)" />
+          <source type="image/jpg" srcset="./img/promotion/Baner-syringes_600x600.jpg" media="(max-width: 610px)">
           <img src="./img/promotion/Baner-syringes_1600x650.jpg" alt="Акция на шприцы">
         </picture>
         <button class="main-baner-button orange js-getOrder-button">Заказать</button>
@@ -29,7 +29,7 @@
 
       <div class="swiper-slide">
         <picture class="img-wrapper">
-          <source type="image/jpg" srcset="./img/promotion/Baner-bathrobes_600x600.jpg" media="(max-width: 610px)" />
+          <source type="image/jpg" srcset="./img/promotion/Baner-bathrobes_600x600.jpg" media="(max-width: 610px)">
           <img src="./img/promotion/Baner-bathrobes_1600x650.jpg" alt="Акция на халаты">
         </picture>
         <button class="main-baner-button orange js-getOrder-button">Заказать</button>
@@ -37,7 +37,7 @@
 
       <div class="swiper-slide">
         <picture class="img-wrapper">
-          <source type="image/jpg" srcset="./img/promotion/Baner-masks_600x600.jpg" media="(max-width: 610px)" />
+          <source type="image/jpg" srcset="./img/promotion/Baner-masks_600x600.jpg" media="(max-width: 610px)">
           <img src="./img/promotion/Baner-masks_1600x650.jpg" alt="Акция на медицинские маски">
         </picture>
         <button class="main-baner-button orange js-getOrder-button">Заказать</button>
@@ -45,8 +45,7 @@
 
       <div class="swiper-slide">
         <picture class="img-wrapper">
-          <source type="image/jpg" srcset="./img/promotion/Baner-masks-children_600x600.jpg"
-            media="(max-width: 610px)" />
+          <source type="image/jpg" srcset="./img/promotion/Baner-masks-children_600x600.jpg" media="(max-width: 610px)">
           <img src="./img/promotion/Baner-masks-children_1600x650.jpg" alt="Акция на детские медицинские маски">
         </picture>
         <button class="main-baner-button orange js-getOrder-button">Заказать</button>
@@ -54,7 +53,7 @@
 
       <div class="swiper-slide">
         <picture class="img-wrapper">
-          <source type="image/jpg" srcset="./img/promotion/Baner-masks-type-c_600x600.jpg" media="(max-width: 610px)" />
+          <source type="image/jpg" srcset="./img/promotion/Baner-masks-type-c_600x600.jpg" media="(max-width: 610px)">
           <img src="./img/promotion/Baner-masks-type-c_1600x650.jpg" alt="Акция на медицинские маски тип С">
         </picture>
         <button class="main-baner-button orange js-getOrder-button">Заказать</button>
@@ -62,7 +61,7 @@
 
       <div class="swiper-slide">
         <picture class="img-wrapper">
-          <source type="image/jpg" srcset="./img/promotion/Baner-mirror_600x600.jpg" media="(max-width: 610px)" />
+          <source type="image/jpg" srcset="./img/promotion/Baner-mirror_600x600.jpg" media="(max-width: 610px)">
           <img src="./img/promotion/Baner-mirror_1600x650.jpg" alt="Акция на зеркала Куско">
         </picture>
         <button class="main-baner-button orange js-getOrder-button">Заказать</button>
