--- a/src/index.html
+++ b/src/index.html
@@ -65,6 +65,7 @@
   @@include('./html-blocks/advantages.html')
 
   <section class="made-in-kaz mt-1-5">
+    <h2 class="visually-hidden">Произведенно в Казахстане</h2>
     <div class="container made-in-kaz-wrapper observer">
       <div class="image">
         <img class="image-v" src="./img/M-in-K.png" alt="Made in Kazakhstan" loading="lazy">
@@ -87,7 +88,7 @@
   <div class="modal js-request-price-modal">
     <div class="modal-wrapper">
       <div class="modal-after">
-        <form action="#" id="js-modal-request-form">
+        <form action="#" id="js-modal-request-form" data-recipient="vmarketolog@dolcepharm.kz">
           <h5>Заполните форму</h5>
           <input type="text" placeholder="Введите ваше имя" name="full-name">
           <input type="text" placeholder="Название компании" name="company">
