--- a/src/html-blocks/advantages.html
+++ b/src/html-blocks/advantages.html
@@ -41,7 +41,7 @@
           <svg>
             <use xlink:href="#assortiment"></use>
           </svg>
-          <p>Широкий ассортимент продукции и гарантию защиты</p>
+          <p>Широкий ассортимент продукции и гарантия защиты</p>
         </div>
       </div>
 
@@ -77,7 +77,7 @@
           <svg>
             <use xlink:href="#defence"></use>
           </svg>
-          <p>Защиту от внутрибольничных инфекций</p>
+          <p>Защита от внутрибольничных инфекций</p>
         </div>
       </div>
 
