--- a/src/html-blocks/head.html
+++ b/src/html-blocks/head.html
@@ -12,7 +12,7 @@
 <meta property="og:image:height" content="630">
 
 <!-- Скрыт от индексации -->
-<meta name="robots" content="noindex, nofollow">
+<!-- <meta name="robots" content="noindex, nofollow"> -->
 <!-- Скрыт от индексации -->
 
 <meta name="google" content="notranslate">
