--- a/src/index.html
+++ b/src/index.html
@@ -89,7 +89,7 @@
     <div class="modal-wrapper">
       <div class="modal-after">
         <form action="#" id="js-modal-request-form" data-recipient="vmarketolog@dolcepharm.kz">
-          <h5>Заполните форму</h5>
+          <h5>Пожалуйста заполните форму</h5>
           <input type="text" placeholder="Введите ваше имя" name="full-name">
           <input type="text" placeholder="Название компании" name="company">
           <input type="tel" placeholder="Телефон" name="phone">
